Fix spacing on register controller form
Fixes #866

--- a/src/pages/Controllers/_controllers.scss
+++ b/src/pages/Controllers/_controllers.scss
@@ -70,10 +70,6 @@
       border-bottom: 1px solid $color-mid-x-light;
     }
 
-    .register-a-controller__submit-segment {
-      text-align: right;
-    }
-
     .p-icon--warning {
       margin-top: 7px;
       position: absolute;
